@@ -1,3 +1,7 @@
+2007-10-19  Sven Neumann  <sven@gimp.org>
+
+	* app/display/gimpdisplayshell-render.c: tiny cosmetic cleanups.
+
 2007-10-18  Sven Neumann  <sven@gimp.org>
 
 	* modules/cdisplay_lcms.c (cdisplay_lcms_get_display_profile):
